--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,13 +54,13 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="132dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:onClick="waniKaniSet"
         android:text="WaniKani Set"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toTopOf="@+id/button2" />
 
     <Button
         android:id="@+id/button2"
@@ -111,5 +111,70 @@
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/waniKaniKeyTextArea" />
+
+    <Button
+        android:id="@+id/addSets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:onClick="addSets"
+        android:text="Add Sets"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/waniKaniKeyText" />
+
+    <Button
+        android:id="@+id/saveSets"
+        android:layout_width="62dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:onClick="save"
+        android:text="Save"
+        app:layout_constraintEnd_toStartOf="@+id/numSets"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/loadSet"
+        app:layout_constraintTop_toTopOf="@+id/addSets" />
+
+    <Button
+        android:id="@+id/loadSet"
+        android:layout_width="62dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:onClick="load"
+        android:text="Load"
+        app:layout_constraintStart_toEndOf="@+id/addSets"
+        app:layout_constraintTop_toTopOf="@+id/addSets" />
+
+    <TextView
+        android:id="@+id/numSets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/saveSets"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/saveSets"
+        tools:text="@string/num_sets" />
+
+    <Button
+        android:id="@+id/LoadingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:onClick="openLoadingButtons"
+        android:text="Loading Screen"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addSets" />
+
+    <Button
+        android:id="@+id/testShortcut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:onClick="testShortcut"
+        android:text="Add Shortcut"
+        app:layout_constraintStart_toEndOf="@+id/LoadingButton"
+        app:layout_constraintTop_toTopOf="@+id/LoadingButton" />
 
 </android.support.constraint.ConstraintLayout>
